--- a/ios/zoopTime/Info.plist
+++ b/ios/zoopTime/Info.plist
@@ -22,8 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>CodePushDeploymentKey</key>
-	<string>fIF8IHDjFi7i5l15AX1hMgpjCttILuM9Gdcwg</string>
+	<!-- <key>CodePushDeploymentKey</key>
+	<string>fIF8IHDjFi7i5l15AX1hMgpjCttILuM9Gdcwg</string> -->
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
